--- a/Image_Cartoonize/README
+++ b/Image_Cartoonize/README
@@ -1,1 +1,9 @@
-
+This project targets to learn different image processing algorithms, filtering methods, 
+colour spaces and using MATLAB guide application for image processing. At the same time, 
+the objective of this project is converting an image to cartooned image. 
+To able to achieve this purpose, we applied several steps to an image. 
+Applied steps gives us different outputs for different images. 
+Because of fact that every image has different colour and brightness levels. 
+So, we need to use different parameters to able to get ideal cartooned image for every 
+image in these steps. Therefore, some cartoonization parameters should be controlled by user. 
+By this way, user could get ideal cartooned image by using an MATLAB guide interface prepared by us.
